[package]
name = "cli"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
config.workspace = true
convert_case.workspace = true
derive_more.workspace = true
hex = { path = "../utils/hex" }
itertools.workspace = true
ethers.workspace = true
ethers-signers.workspace = true
eyre.workspace = true
hyperlane-core = { path = "../hyperlane-core", features = ["agent"] }
hyperlane-base = { path = "../hyperlane-base" }
hyperlane-ethereum = { path = "../chains/hyperlane-ethereum" }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "parking_lot"] }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true